--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,1 +1,12 @@
-<h1>Login</h1>
+<h3><i class="fas fa-book-reader"></i>StoryBooks</h3>
+<div class="section">
+    <p class="lead">
+        Create a public and private stories from you life
+    </p>
+</div>
+<div class="divider"></div>
+<div class="section">
+    <a href="/auth/google" class="btn red darken-1">
+        <i class="fab fa-google left"></i> Log in with Google
+    </a>
+</div>
