--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    {{> _header}}
     <div class="container">
         {{{body}}}
     </div>
@@ -20,6 +21,10 @@
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+    <script>
+        M.Sidenav.init(document.querySelectorAll('.sidenav'))
+    </script>
 </body>
 
 </html>
